<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AnoniMessenger</string>
    <string name="action_settings">Settings</string>
    <string name="Enter_name">Enter name</string>
    <string name="Enter_Password">Enter Password</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="Enter_phone_number">Enter phone number</string>
    <string name="Register">Register</string>

</resources>
