<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.somik.anonimessenger.MainActivity"
    tools:ignore="MergeRootFrame" >

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/Enter_Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="@string/Confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:text="@string/Register" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText3"
            android:layout_alignLeft="@+id/editText3"
            android:layout_marginBottom="45dp"
            android:ems="10"
            android:hint="@string/Enter_phone_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="44dp"
            android:ems="10"
            android:hint="@string/Enter_name"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

    </RelativeLayout>



